--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
                   <div class="mySlides fade">
                           <div class="numbertext">1 / 3</div>
-                          <img src="img/meme1.jpg" style="width:100%">
+                          <img src="img/meme1.JPG" style="width:100%">
                           <div class="text">
                               <h3><i>&num;ProjectARMADAV</i></h3>
                               <p>Sample text</p>
@@ -51,7 +51,7 @@
 
                         <div class="mySlides fade">
                           <div class="numbertext">3 / 3</div>
-                          <img src="img/demopic.jpg" style="width:100%">
+                          <img src="img/DemoPic.JPG" style="width:100%">
                           <div class="text">Caption Three</div>
                         </div>
 
