--- a/sampleart.html
+++ b/sampleart.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-              <img src="img/header.JPG">
+              <img src="img/header.jpg">
         </header>
         <nav id="cssmenu">
             <ul>
