--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
 
                         <div class="mySlides fade">
-                          <img src="img/ARMADAVCAD.jpg" style="width:100%;">
+                          <img src="img/ARMADAVCAD.JPG" style="width:100%;">
                           <div class="text" style="height: fit-content;background: none; top: 0%; color: #222222; width: 45%">
                           </div>
                         </div>
