--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
         <link rel="stylesheet" href="css/nav.css">
         
         <link href="css/index.css" rel="stylesheet">
-        
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-6984237136241320",
+            enable_page_level_ads: true
+          });
+        </script>
         <!--meta charset='utf-8'>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1"-->
@@ -241,12 +247,12 @@
                 </a>
             </div>
             <div class="footrow">
-                <div class="footcol" style="float: left; margin-left: 28%">
+                <div class="footcol" style="float: left; margin-left: 28%;">
                     <a href="">| Home</a><br>
                     <a href="">| News</a><br>
                     <a href="">| Product Info</a><br>
                 </div>
-                <div class="footcol"  style="float: right; margin-right:18%;">
+                <div class="footcol"  style="float: right; margin-right:18%;width: 30%">
                     <a href="">| Contribute</a><br>
                     <a href="">| Contact</a><br>
                     <a href="">| About Us - Team Paraiso</a><br>
