--- a/sampleart.html
+++ b/sampleart.html
@@ -41,8 +41,8 @@
               <div>
                   <a href=""> 
                   <img>
-                  <h2>Headline</h2>
-                  <p>Contents</p>
+                  <h2>Website Development in Prgress</h2>
+                  <p>Please come back later. More features to come!</p>
                   </a>
               </div>
           </div>
