--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <ul>
                 <li class="active"><a  href="#home">Home</a></li>
                 <li><a href="sampleart.html">ARMADAV News</a></li>
-                <li><a href="product.html">Product Info</a></li>
-                <li><a href="milestones.html">Contribute</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="about.html">About Us</a></li>
+                <li><a href="sampleart.html">Product Info</a></li>
+                <li><a href="sampleart.html">Contribute</a></li>
+                <li><a href="sampleart.html">Contact</a></li>
+                <li><a href="sampleart.html">About Us</a></li>
             </ul>
         </nav>
               <!--div class="slideshow-container">
