--- a/sampleart.html
+++ b/sampleart.html
@@ -25,7 +25,7 @@
         <nav id="cssmenu">
             <ul>
                 <li><a  href="index.html">Home</a></li>
-                <li class="active"><a href="sampleart.html">ARMADAV News</a></li>
+                <li><a href="sampleart.html">ARMADAV News</a></li>
                 <li><a href="product.html">Product Info</a></li>
                 <li><a href="milestones.html">Contribute</a></li>
                 <li><a href="contact.html">Contact</a></li>
