--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
             <ul>
                 <li class="active"><a  href="#home">Home</a></li>
                 <li><a href="sampleart.html">ARMADAV News</a></li>
-                <li><a href="sampleart.html">Product Info</a></li>
-                <li><a href="sampleart.html">Contribute</a></li>
-                <li><a href="sampleart.html">Contact</a></li>
-                <li><a href="sampleart.html">About Us</a></li>
+                <li><a href="product.html">Product Info</a></li>
+                <li><a href="milestones.html">Contribute</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="about.html">About Us</a></li>
             </ul>
         </nav>
               <!--div class="slideshow-container">
@@ -170,7 +170,6 @@
                               </div>
                   </div>
                     <div class="item">
-
                               <img src="img/TVInterview2.jpg" >
                               <div class="text" style="top: 10%;right: 0;border-left: solid teal 100px;height: fit-content">
                                   <h1>Award-Winning</h1>
@@ -196,28 +195,28 @@
                     <div class="rowart">
                         <a href="products.html">
                         <div class="colart" style="background-color: peachpuff">
-                            <img src="">
+                            <img src="img/buy.svg">
                             <h1>BUY</h1>
                             <p>Order your fully built ARMADAV now!</p>
                         </div>
                         </a>
                         <a href="preducts.html">
                         <div class="colart" style="background-color: aquamarine">
-                            <img src="">
+                            <img src="img/rent.svg">
                             <h1>RENT</h1>
                             <p>Use the ARMADAV for a limited time under a contract. <u style="color:red">Learn More.</u></p>
                         </div>
                         </a>
                         <a  href="contribute.html">
                         <div class="colart" style="background-color: crimson; color: white;">
-                            <img src="">
+                            <img src="img/invest.svg">
                             <h1>INVEST</h1>
-                            <p>If you are a supplier for some of the ARMADAV parts, help Team Paraiso build more ARMADAVs and earn!</p>
+                            <p>If you are a supplier of ARMADAV parts, help Team Paraiso build more ARMADAVs and earn!</p>
                         </div>
                         </a>
                         <a  href="contribute.html">
                         <div class="colart" style="background-color: gold">
-                            <img src="">
+                            <img src="img/donate.svg">
                             <h1>DONATE</h1>
                             <p>Support Team Paraiso now to help keep the oceans in check!</p>
                         </div>
@@ -255,7 +254,7 @@
                 <div class="footcol"  style="float: right; margin-right:18%;width: 30%">
                     <a href="">| Contribute</a><br>
                     <a href="">| Contact</a><br>
-                    <a href="">| About Us - Team Paraiso</a><br>
+                    <a href="">| About Team Paraiso</a><br>
                 </div>
             </div>
             <div class="footrow"><p style="text-align: center;">&COPY; 2020 Team Paraiso <br> All Rights Reserved</p></div>
