--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         <div class="row">
             <article>
-                    <iframe width="560px" height="315px" style="padding-top: 20px; margin: auto; display: block;" src="https://www.youtube.com/embed/pSt5y1gSdg8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe style="padding-top: 20px; margin: auto; display: block;width:50%; min-height: 420px;" src="https://www.youtube.com/embed/pSt5y1gSdg8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="rowart">
                         <a href="products.html">
                         <div class="colart" style="background-color: peachpuff">
