--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   </div>
 
                   <div class="item">
-                          <img src="img/ARMADAVCAD.jpg">
+                          <img src="img/ARMADAVCAD.JPG">
                   </div>
 
                   <div class="item">
