--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,7 @@
                             <h1>CONTACT</h1>
                             <div class="artcont">
                                 <h3>Mailing Address</h3>
+                                <div style="overflow:hidden;resize:none;max-width:100%;width:60%;height:300px;"><div id="gmapdisplay" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Philippine+Science+High+School+Soccsksargen&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="googlemap-html" href="https://www.embed-map.com" id="grab-mapdata">https://www.embed-map.com</a><style>#gmapdisplay img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
                                 <p> Philippine Science High School - SOCCSKSARGEN Region Campus<br>Brgy. Paraiso<br>Koronadal City 9506</p>
                                 <br>
                                 <h3 style="margin: 0px;padding: 0px;display: inline;">Team Paraiso</h3>
