--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                 <li><a  href="index.html">Home</a></li>
                 <li><a href="sampleart.html">ARMADAV News</a></li>
                 <li><a href="product.html">Product Info</a></li>
-                <li><a href="milestones.html">Contribute</a></li>
+                <li><a href="contribute.html">Contribute</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li  class="active"><a href="about.html">About Us</a></li>
             </ul>
@@ -86,7 +86,7 @@
                     <a href="product.html">| Product Info</a><br>
                 </div>
                 <div class="footcol"  style="float: right; margin-right:18%;">
-                    <a href="">| Contribute</a><br>
+                    <a href="contribute.html">| Contribute</a><br>
                     <a href="contact.html">| Contact</a><br>
                     <a href="about.html">| About Team Paraiso</a><br>
                 </div>
