--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 <li><a  href="index.html">Home</a></li>
                 <li><a href="sampleart.html">ARMADAV News</a></li>
                 <li><a href="product.html">Product Info</a></li>
-                <li><a href="milestones.html">Contribute</a></li>
+                <li><a href="contribute.html">Contribute</a></li>
                 <li  class="active"><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
@@ -53,12 +53,16 @@
                                     <b>Rebekah Hormigos</b><br>
                                     <i>Marketing Manager</i><br>
                                     <a href="mailto:rbhormigos@gmail.com">rbhormigos&#64;gmail.com</a>
-                                </p>
-                                
+                                </p>                                
                                 <p>
                                     <b>Bianca Jocson</b><br>
                                     <i>Marketing Manager</i><br>
                                     <a href="mailto:biancajocson4@gmail.com">biancajocson4&#64;gmail.com</a>
+                                </p>                                
+                                <p>
+                                    <b>Kevin Daga-as</b><br>
+                                    <i>Adviser</i><br>
+                                    <a href="mailto:kevin.dagaas@gmail.com">kevin.dagaas&#64;gmail.com</a>
                                 </p>
                             </div>
                         </article>
@@ -106,7 +110,7 @@
                     <a href="product.html">| Product Info</a><br>
                 </div>
                 <div class="footcol"  style="float: right; margin-right:18%;">
-                    <a href="">| Contribute</a><br>
+                    <a href="contribute.html">| Contribute</a><br>
                     <a href="contact.html">| Contact</a><br>
                     <a href="about.html">| About Team Paraiso</a><br>
                 </div>
