--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <li class="active"><a  href="#home">Home</a></li>
                 <li><a href="sampleart.html">ARMADAV News</a></li>
                 <li><a href="product.html">Product Info</a></li>
-                <li><a href="milestones.html">Contribute</a></li>
+                <li><a href="contribute.html">Contribute</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
@@ -252,7 +252,7 @@
                     <a href="product.html">| Product Info</a><br>
                 </div>
                 <div class="footcol"  style="float: right; margin-right:18%;">
-                    <a href="">| Contribute</a><br>
+                    <a href="contribute.html">| Contribute</a><br>
                     <a href="contact.html">| Contact</a><br>
                     <a href="about.html">| About Team Paraiso</a><br>
                 </div>
