--- a/sampleart.html
+++ b/sampleart.html
@@ -30,7 +30,7 @@
                 <li><a  href="index.html">Home</a></li>
                 <li class="active"><a href="sampleart.html">ARMADAV News</a></li>
                 <li><a href="product.html">Product Info</a></li>
-                <li><a href="milestones.html">Contribute</a></li>
+                <li><a href="contribute.html">Contribute</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="about.html">About Us</a></li>
             </ul>
@@ -130,14 +130,14 @@
             </div>
             <div class="footrow">
                 <div class="footcol" style="float: left; margin-left: 28%">
-                    <a href="">| Home</a><br>
-                    <a href="">| News</a><br>
-                    <a href="">| Product Info</a><br>
+                    <a href="index.html">| Home</a><br>
+                    <a href="sampleart.html">| News</a><br>
+                    <a href="product.html">| Product Info</a><br>
                 </div>
                 <div class="footcol"  style="float: right; margin-right:18%;">
-                    <a href="">| Contribute</a><br>
-                    <a href="">| Contact</a><br>
-                    <a href="">| About Team Paraiso</a><br>
+                    <a href="contribute.html">| Contribute</a><br>
+                    <a href="contact.html">| Contact</a><br>
+                    <a href="about.html">| About Team Paraiso</a><br>
                 </div>
             </div>
             <div class="footrow"><p style="text-align: center;">&COPY; 2020 Team Paraiso <br> All Rights Reserved</p></div>
