--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
             <article>
                     <iframe style="padding-top: 20px; margin: auto; display: block;width:50%; min-height: 420px;" src="https://www.youtube.com/embed/pSt5y1gSdg8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="rowart">
-                        <a href="products.html">
+                        <a href="product.html">
                         <div class="colart" style="background-color: peachpuff">
                             <img src="img/buy.svg">
                             <h1>BUY</h1>
                             <p>Order your fully built ARMADAV now!</p>
                         </div>
                         </a>
-                        <a href="preducts.html">
+                        <a href="product.html">
                         <div class="colart" style="background-color: aquamarine">
                             <img src="img/rent.svg">
                             <h1>RENT</h1>
