--- a/index.html
+++ b/index.html
@@ -193,28 +193,28 @@
             <article>
                     <iframe style="padding-top: 20px; margin: auto; display: block;width:50%; min-height: 420px;" src="https://www.youtube.com/embed/pSt5y1gSdg8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="rowart">
-                        <a href="product.html">
+                        <a href="product.html#vars">
                         <div class="colart" style="background-color: peachpuff">
                             <img src="img/buy.svg">
                             <h1>BUY</h1>
                             <p>Order your fully built ARMADAV now!</p>
                         </div>
                         </a>
-                        <a href="product.html">
+                        <a href="product.html#vars">
                         <div class="colart" style="background-color: aquamarine">
                             <img src="img/rent.svg">
                             <h1>RENT</h1>
                             <p>Use the ARMADAV for a limited time under a contract. <u style="color:red">Learn More.</u></p>
                         </div>
                         </a>
-                        <a  href="contribute.html">
+                        <a  href="contribute.html#invest">
                         <div class="colart" style="background-color: crimson; color: white;">
                             <img src="img/invest.svg">
                             <h1>INVEST</h1>
                             <p>If you are a supplier of ARMADAV parts, help Team Paraiso build more ARMADAVs and earn!</p>
                         </div>
                         </a>
-                        <a  href="contribute.html">
+                        <a  href="contribute.html#don8">
                         <div class="colart" style="background-color: gold">
                             <img src="img/donate.svg">
                             <h1>DONATE</h1>
