--- a/product.html
+++ b/product.html
@@ -48,18 +48,18 @@
                                 <h2>Specifications</h2>
                                 <h4>Technologies</h4>
                                 <ul>
-                                    <li><a href="">bGeigie Nano radiation logger</a>
+                                    <li><a href="https://safecast.org/devices/bgeigie-nano/">bGeigie Nano radiation logger</a>
                                         <ul>
                                             <li>LND 7317</li>
                                             <li>OpenLogger Data-logging module</li>
                                             <li>GPS Sensor</li>
                                         </ul></li>
-                                    <li><a href="">ATX2 Microcontroller</a></li>
-                                    <li><a href="">HMC5883L Digital Compass</a></li>
+                                    <li><a href="http://www.inexglobal.com/products.php?pcode=atx2&type=micro">ATX2 Microcontroller</a></li>
+                                    <li><a href="https://www.alldatasheet.com/view.jsp?Searchword=HMC5883L&sField=4">HMC5883L Digital Compass</a></li>
                                     <li>Water Pumps</li>
                                     <li>Solar Panel</li>
                                     <li>Lithium-ion batteries</li>
-                                    <li><a href="">Long Range Communication module</a> (optional)</li>
+                                    <li><a href="https://www.semtech.com/products/wireless-rf/lora-transceivers/sx1276">Long Range Communication module</a> (optional)</li>
                                 </ul>
                                 <h4>Functions</h4>
                                 <ul>
@@ -69,7 +69,7 @@
                                     <li>Power itself by using solar and battery reserves</li>
                                 </ul>
                                     
-                                <h2>Variants</h2>
+                                <h2 id="vars">Variants</h2>
                                 <table>
                                     <tr>
                                         <th style="background-image: url('img/armalogo.png'); background-position: center;background-size: 60%; background-repeat: no-repeat;"></th>
