--- a/contribute.html
+++ b/contribute.html
@@ -44,15 +44,15 @@
                                 <figure>
                                     <img src="https://medias.spotern.com/spots/w640/94/94261-1532336916.jpg" alt="Don8"/>
                                 </figure>
-                                <p>Any form of donation would be greatly appreciated: may it be financial or material. Regarding the former, it can be sent to our <a href="">Paypal Account</a>, <a href="">Patreon</a>, through bank or personally by cash. As for the materials, the components of ARMADAV can be sent to our <a href="contact.html">address</a>.
+                                <p>Any form of donation would be greatly appreciated: may it be financial or material. Regarding the former, it can be sent to our <a href="https://www.paypal.me/safertonorisk">Paypal Account</a>, <a href="https://www.patreon.com/safertonorisk01">Patreon</a>, through bank or personally by cash. As for the materials, the components of ARMADAV can be sent to our <a href="contact.html">address</a>.
                                 </p>
-                                <h2>Invest</h2>
+                                <h2 id="invest">Invest</h2>
                                 <figure>
                                     <img src="https://i.kym-cdn.com/photos/images/newsfeed/001/499/826/2f0.png" alt="git stonks"/>
                                 </figure>
                                 <p>You may also support ARMADAV by investing in our business. The investment may be made in cash or by electronic components. <a href="contact.html">Contact us</a> for more details to contribute and at the same time earn.</p>
-                                <h2>Purchase</h2>
-                                <p></p>
+                                <h2>Purchase or Rental</h2>
+                                <p>Purchasing of the ARMADAV keeps the Team Paraiso's business up and running. Plus this benefits you by having your own ARMADAV to use personally in safeguarding the waterways. <a href='contact.html'>Contact us</a> now to learn more!</p>
                             </div>
                         </article>
               </div>
