--- a/article/frontpagelive.html
+++ b/article/frontpagelive.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
     <head>
-        <title>About Us| Team Paraiso   </title>
+        <title>ARMADAV News| FRONTPAGE LIVE News features ARMADAV on Earth Day article  </title>
         
         <link rel="stylesheet" href="../css/nav.css">
         <link href="../img/armalogo.png" rel="icon">
